# weather_analysis

./: .gitignore  docker-compose.yaml  dockerfile.celery  dockerfile.celerybeat  dockerfile.dash  init-db.sh  pyproject.toml
sh/: run_ambient_download.sh
src/: ambient_weather.py  call_backs.py  celery_app.py  dashboard.py  db.py  queries.py  queries.toml  wsgi.py
tests/: test_ambient_weather.py
