[project]
name = "weather-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "polars (>=1.34.0,<2.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "websockets (>=15.0.1,<16.0.0)"
]

[tool.poetry]
packages = [{include = "weather_analysis", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
