[project]
name = "weather-analysis"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "polars (>=1.34.0,<2.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    # asyncio is part of the standard library for supported Pythons; remove PyPI asyncio
    "websockets (>=15.0.1,<16.0.0)",
    "python-socketio (>=5.14.2,<6.0.0)",
    "aiohttp (>=3.13.1,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "dash[celery] (>=3.2.0,<4.0.0)",
    "redis (>=3.5.3,<=5.0.4)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
]

[tool.poetry]
packages = [{include = "src", from = "."}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
